fix layout problem with pagination panel center key display

--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ body {font-family: monospace;}
   display:inline-block;
 }
 
+#key .panel-heading {
+  text-align: center;
+}
+
 #words .panel-heading {
   text-align: right;
 }
